--- a/Views/Movies/Index.cshtml
+++ b/Views/Movies/Index.cshtml
@@ -1,10 +1,10 @@
 @model MvcMovie.Models.MovieGenreViewModel
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "View All";
 }
 <h2>Index</h2>
 <p>
-    <a asp-action="Create">Create New</a>
+    <a class="link-button-small" asp-action="Create">Create New</a>
 </p>
 <form asp-controller="Movies" asp-action="Index" method="get">
     <p>
